<resources>
    <string name="app_name">Seedword. Mobi</string>
    <string name="ActivityPage">活動頁</string>
    <string name="ProductPage">產品頁</string>
    <string name="MapPage">地圖頁</string>
    <string name="QuestionPage">問卷頁</string>
    <string name="Logout">登出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
