<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Activity"
        android:icon="@drawable/ic_home_black_24dp"

        android:title="@string/ActivityPage" />

    <item
        android:id="@+id/Product"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/ProductPage" />

    <item
        android:id="@+id/Map"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/MapPage" />
    <item
        android:id="@+id/Question"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/QuestionPage" />
    <item
        android:id="@+id/Logout"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Logout" />

</menu>
